test/fail/partial_index00.v3
//@execute 0=13; 13=26; -13=0
class A {
	def [i: int] -> int { return i + 13; }
}
def a = A.new();
def m = a[_];

def main(a: int) -> int {
	return m(a);
}
